--- a/Confronto/src/br/com/confronto/view/CadPessoaPanel.form
+++ b/Confronto/src/br/com/confronto/view/CadPessoaPanel.form
@@ -187,7 +187,7 @@
         <Component class="javax.swing.JComboBox" name="cmbTipoPessoa">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="getModelTipo()" type="code"/>
+              <Connection code="getModel(EnumTipoDao.TIPOCLIENTE)" type="code"/>
             </Property>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[28, 20]"/>
@@ -213,7 +213,7 @@
         <Component class="javax.swing.JComboBox" name="cmbSexo">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="getModelSexo()" type="code"/>
+              <Connection code="getModel(EnumTipoDao.SEXO)" type="code"/>
             </Property>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[28, 20]"/>
@@ -244,7 +244,7 @@
         <Component class="javax.swing.JComboBox" name="cmbEstadoCivil">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="getModelTipo()" type="code"/>
+              <Connection code="getModel(EnumTipoDao.ESTADOCIVIL)" type="code"/>
             </Property>
           </Properties>
         </Component>
@@ -256,7 +256,7 @@
         <Component class="javax.swing.JComboBox" name="cmbProfissao">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="getModelProfissao()" type="code"/>
+              <Connection code="getModel(EnumTipoDao.PROFISSAO)" type="code"/>
             </Property>
             <Property name="autoscrolls" type="boolean" value="true"/>
           </Properties>
@@ -386,9 +386,9 @@
                                   <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
                                   <Component id="lblEstado" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="cmbEstado" pref="124" max="32767" attributes="1"/>
+                                  <Component id="cmbEstado" pref="130" max="32767" attributes="1"/>
                               </Group>
-                              <Component id="jtfEndereco" alignment="0" pref="356" max="32767" attributes="1"/>
+                              <Component id="jtfEndereco" alignment="0" pref="362" max="32767" attributes="1"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -396,7 +396,7 @@
                           <Component id="lblCidade" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="cmbCidade" min="-2" pref="124" max="-2" attributes="1"/>
-                          <EmptySpace pref="122" max="32767" attributes="0"/>
+                          <EmptySpace pref="128" max="32767" attributes="0"/>
                           <Component id="lblCep" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jftfCep" min="-2" pref="83" max="-2" attributes="1"/>
@@ -594,7 +594,7 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="53" max="32767" attributes="0"/>
+                  <EmptySpace pref="58" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
